@@ -17,7 +17,7 @@ $t->app->asset('app.js' => '/js/a.js');
 like $cwd, qr{public/js}, 'changed dir';
 
 $t->get_ok('/test1')->status_is(200)
-  ->content_like(qr{<script src="/packed/app-527b09c38362b669ec6e16c00d9fb30d\.min\.js"}m);
+  ->content_like(qr{<script src="/packed/app-278ce8b881b15d1972024a8e9ece6799\.min\.js"}m);
 
 $t->get_ok($t->tx->res->dom->at('script')->{src})->status_is(200)->content_is('var too = "cool";');
 
